Fix hidden title on mobile (#3274)

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -24,6 +24,7 @@ a:visited {
 
 .fixedHeaderContainer header .headerTitleWithLogo {
   color : white;
+  display: block !important;
 }
 
 .navigationSlider .slidingNav ul a {
